Shturich Task/exceptions.txt
d[2]
Traceback (most recent call last):
  File "<input>", line 1, in <module>
KeyError: 2
l = []
l[1]
Traceback (most recent call last):
  File "<input>", line 1, in <module>
IndexError: list index out of range
import.sys
  File "<input>", line 1
    import.sys
          ^
SyntaxError: invalid syntax
import sys
sys.last_traceback
<traceback object at 0x10e5afa08>
print(sys.last_traceback)
<traceback object at 0x10e5afa08>
print(sys.last_traceback())
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: 'traceback' object is not callable
sys.last_traceback()
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: 'traceback' object is not callable
sys.exc_info()
(None, None, None)
sys.exc_traceback
Traceback (most recent call last):
  File "<input>", line 1, in <module>
AttributeError: module 'sys' has no attribute 'exc_traceback'
sys.exc_traceback()
Traceback (most recent call last):
  File "<input>", line 1, in <module>
AttributeError: module 'sys' has no attribute 'exc_traceback'
sys.exc_info()
(None, None, None)
import traceback
traceback.print_last()
Traceback (most recent call last):
  File "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/code.py", line 91, in runcode
    exec(code, self.locals)
  File "<input>", line 1, in <module>
AttributeError: module 'sys' has no attribute 'exc_traceback'
l[1]
Traceback (most recent call last):
  File "<input>", line 1, in <module>
IndexError: list index out of range